Support java 11