@@ -15,13 +15,6 @@
 
   <dependencies>
     <dependency>
-      <groupId>com.sun</groupId>
-      <artifactId>tools</artifactId>
-      <version>1.8.0</version>
-      <scope>system</scope>
-      <systemPath>${java.home}/../lib/tools.jar</systemPath>
-    </dependency>
-    <dependency>
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter-engine</artifactId>
       <version>5.7.0</version>
@@ -48,8 +41,25 @@
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.8.1</version>
         <configuration>
-          <source>1.8</source>
-          <target>1.8</target>
+          <source>11</source>
+          <target>11</target>
+          <compilerArgs>
+            <arg>--add-exports</arg>
+            <arg>jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED</arg>
+            <arg>--add-exports</arg>
+            <arg>jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
+            <arg>--add-exports</arg>
+            <arg>jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED</arg>
+            <arg>--add-exports</arg>
+            <arg>jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>
+            <arg>--add-exports</arg>
+            <arg>jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>
+            <arg>--add-exports</arg>
+            <arg>jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED</arg>
+            <arg>--add-exports</arg>
+            <arg>jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED</arg>
+          </compilerArgs>
+
         </configuration>
       </plugin>
       <plugin>
@@ -57,7 +67,14 @@
         <artifactId>maven-failsafe-plugin</artifactId>
         <version>3.0.0-M5</version>
         <configuration>
-          <forkMode>once</forkMode>
+          <argLine>--add-exports jdk.compiler/com.sun.tools.javac.api=javac.plugin
+            --add-exports jdk.compiler/com.sun.tools.javac.util=javac.plugin
+            --add-exports jdk.compiler/com.sun.tools.javac.parser=javac.plugin
+            --add-exports jdk.compiler/com.sun.tools.javac.tree=javac.plugin
+            --add-exports jdk.compiler/com.sun.tools.javac.code=javac.plugin
+            --add-exports jdk.compiler/com.sun.tools.javac.file=javac.plugin
+            --add-exports jdk.compiler/com.sun.tools.javac.comp=javac.plugin
+          </argLine>
         </configuration>
         <executions>
           <execution>
